fix .center on mobile

--- a/css/site.css
+++ b/css/site.css
@@ -126,7 +126,8 @@ header img {
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
-	width: 50%;
+	width: 100%;
+	max-width: 500px;
 }
 
 #subpage-logo {
